<?xml version="1.0" encoding="utf-8"?>
<!--
  FileName: activity_main.xml
  Purpose: Vertical layout for A2
  Revision History
           Steven Bulgin, 2016.11.07: Fixed fill_parents and adding header comments to be inline 
                            with Conestoga coding standards
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="io.github.steve_bulgin.prog3210_a2.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A2 PROG3210!" />

    <Button
        android:id="@+id/start"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/buttonshape"
        android:text="@string/start" />

    <Button
        android:id="@+id/scoreboard"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/buttonshape"
        android:text="@string/scoreboard" />

    <Button
        android:id="@+id/player1"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/buttonshape"
        android:text="@string/player1" />

    <Button
        android:id="@+id/player2"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/buttonshape"
        android:text="@string/player2" />

    <Button
        android:id="@+id/add_player"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/buttonshape"
        android:text="@string/add_player" />


</LinearLayout>
